--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "rportfolio",
+  "homepage":"https://saadkhan7336.github.io/saadport2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.5.0",
     "emailjs-com": "^3.2.0",
+    "git": "^0.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
